basic working version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,4 +9,13 @@
     "debug.console.fontSize": 14,
     "terminal.integrated.fontSize": 14,
     "terminal.integrated.lineHeight": 1.5,
+    "protoc": {
+        "path": "/opt/homebrew/bin/protoc",
+        "compile_on_save": true,
+        "options": [
+            "--proto_path=${workspaceRoot}/lib/protos",
+            "--proto_path=/opt/homebrew/Cellar/protobuf/33.1/include",
+            "--dart_out=grpc:${workspaceRoot}/lib/generated"
+        ]
+    },
 }
